--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
 }
 
 * {
-  /* transition: position 1000ms; */
+  transition: position 1000ms;
 }
 
 html,
@@ -59,8 +59,31 @@ b {
   margin-block: 10px;
 }
 
+.card-container {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  inset: 0;
+  backdrop-filter: blur(10px);
+}
+
+.card {
+  animation: card-scale 1000ms linear 0s 1 forwards;
+  transition: all 750ms;
+}
+
 @media (min-width: 1024px) {
   :root {
     --padding-inline: 100px;
+  }
+}
+
+@keyframes card-scale {
+  0% {
+    height: auto;
+  }
+
+  100% {
+    height: 90vh;
   }
 }
